--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mysale Now Api",
   "main": "server.js",
   "scripts": {
-  	"start": "nodemon server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "mongoose": "^4.5.9"
